--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -5,7 +5,7 @@
         <div
             class="flex align-items-center justify-content-between relative lg:static py-6 px-4 mx-0 md:px-7 lg:px-8 lg:py-6 lg:mx-8">
             <a class="cursor-pointer" (click)="router.navigate(['/'])">
-                <img class="logo-landing" src="assets/layout/images/logo.png" alt="Logo">
+                <svg width="80" id="Camada_1" data-name="Camada 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 550 550"><defs><style>.cls-1{fill:#b2b2b2;}.cls-2{fill:#5a4320;}.cls-3{fill:#f9b233;}.cls-4{fill:#7cb359;}.cls-5{fill:#257a33;}.cls-6{fill:#ffed00;}</style></defs><title>Cerrado DPAT_final</title><path class="cls-1" d="M130.29,456.22l57.66-11,61.87,2,32.59-1.35,40.85,6.36,37-5,47.2,6.43L372,464.91s-40.06,13.5-41.88,13.5H262.36l-34.26-6-63.18-6.25Z"/><polygon class="cls-2" points="299.1 349.85 326.3 295.7 309.87 314.52 316.22 288.77 295.84 336.17 277.7 370.14 269.04 374.57 266.1 371.75 266.1 371.75 236.15 343.06 190.84 302.82 204.12 324.23 180.24 312.09 221.12 343.67 253.98 374.57 266.02 387.61 266.32 386.9 266.54 402.1 257.77 447.21 251.5 461.99 281.05 461.99 277.28 412.63 277.44 396.56 299.1 349.85"/><polygon class="cls-3" points="248.11 208.13 157.03 208.13 111.49 287.01 157.03 365.89 248.11 365.89 293.66 287.01 248.11 208.13"/><polygon class="cls-4" points="366.09 190.38 293.61 190.38 257.37 253.15 293.61 315.92 366.09 315.92 402.33 253.15 366.09 190.38"/><polygon class="cls-5" points="309.31 116.87 236.82 116.87 200.58 179.64 236.82 242.41 309.31 242.41 345.55 179.64 309.31 116.87"/><polygon class="cls-6" points="204.78 168.28 142.59 168.28 111.49 222.15 142.59 276.02 204.78 276.02 235.88 222.15 204.78 168.28"/></svg>
             </a>
             <a pRipple class="cursor-pointer block md:hidden text-700 text-primary" pStyleClass="@next"
                 enterFromClass="ng-hidden" enterActiveClass="px-fadein" leaveToClass="ng-hidden"
@@ -57,8 +57,23 @@
                 class="grid grid-nogutter justify-content-between align-items-center mb-6 py-6 md:mb-8 md:py-8">
                 <div
                     class="col-12 md:col-4 flex flex-column gap-4 flex-order-1 md:flex-order-0 align-items-center md:align-items-start text-center md:text-left">
-                    <span class="block text-900 font-bold text-4xl">Understanding the world’s knowledge production on Grassland</span>
-                    <span class="block text-700 text-lg">This project showcases the results of a comprehensive scientometric analysis of global scientific publications focused on grasslands. The analysis aimed to:</span>
+                    <span class="block text-900 font-bold text-4xl">Cerrado em Rede</span>
+                    <span class="block text-700 text-lg">Esse projeto apresenta uma
+                        análise e síntese da produção científica
+                        sobre o Cerrado brasileiro, utilizando
+                        dados da plataforma OpenAlex para
+                        mapear os principais autores,
+                        instituições e países envolvidos nas
+                        pesquisas, além de explorar as
+                        colaborações entre pesquisadores e a
+                        evolução dos temas de estudo. O
+                        objetivo é oferecer uma visão clara das
+                        redes científicas que moldam o campo,
+                        destacando tendências emergentes e
+                        os fluxos de conhecimento,
+                        contribuindo para o avanço do
+                        entendimento sobre o Cerrado.
+                    </span>
                     <ul class="flex flex-wrap gap-5 list-none p-0">
                         <li class="flex align-items-center">
                             <div class="p-1 border-circle bg-green-400 inline-block mr-2"></div>
@@ -73,7 +88,7 @@
 
                 <div class="col-12 md:col-7 flex-order-0 md:flex-order-1 mb-6 md:mb-0 border-round">
                     <img animateEnter="moveinright"
-                        src="assets/layout/images/banner.webp" alt=""
+                        src="assets/layout/images/banner.png" alt=""
                         class="w-10	border-round shadow-2 animation-duration-1000 animation-ease-out">
                 </div>
             </div>
@@ -115,7 +130,7 @@
 
             <div class="flex flex-column justify-content-center w-full align-items-center">
                 <a class="cursor-pointer" href="#">
-                    <img class="logo-landing" src="assets/layout/images/logo.png" alt="Logo">
+                    <svg width="80" id="Camada_1" data-name="Camada 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 550 550"><defs><style>.cls-1{fill:#b2b2b2;}.cls-2{fill:#5a4320;}.cls-3{fill:#f9b233;}.cls-4{fill:#7cb359;}.cls-5{fill:#257a33;}.cls-6{fill:#ffed00;}</style></defs><title>Cerrado DPAT_final</title><path class="cls-1" d="M130.29,456.22l57.66-11,61.87,2,32.59-1.35,40.85,6.36,37-5,47.2,6.43L372,464.91s-40.06,13.5-41.88,13.5H262.36l-34.26-6-63.18-6.25Z"/><polygon class="cls-2" points="299.1 349.85 326.3 295.7 309.87 314.52 316.22 288.77 295.84 336.17 277.7 370.14 269.04 374.57 266.1 371.75 266.1 371.75 236.15 343.06 190.84 302.82 204.12 324.23 180.24 312.09 221.12 343.67 253.98 374.57 266.02 387.61 266.32 386.9 266.54 402.1 257.77 447.21 251.5 461.99 281.05 461.99 277.28 412.63 277.44 396.56 299.1 349.85"/><polygon class="cls-3" points="248.11 208.13 157.03 208.13 111.49 287.01 157.03 365.89 248.11 365.89 293.66 287.01 248.11 208.13"/><polygon class="cls-4" points="366.09 190.38 293.61 190.38 257.37 253.15 293.61 315.92 366.09 315.92 402.33 253.15 366.09 190.38"/><polygon class="cls-5" points="309.31 116.87 236.82 116.87 200.58 179.64 236.82 242.41 309.31 242.41 345.55 179.64 309.31 116.87"/><polygon class="cls-6" points="204.78 168.28 142.59 168.28 111.49 222.15 142.59 276.02 204.78 276.02 235.88 222.15 204.78 168.28"/></svg>
                 </a>
                 <div class="text-600 text-xl text-justify line-height-3 ">UFG – Federal University of Goiás</div>
                 <div class="text-600 text-xl text-justify line-height-3 ">Lapig – Remote Sensing and GIS Lab</div>
