--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -74,16 +74,16 @@
                         contribuindo para o avanço do
                         entendimento sobre o Cerrado.
                     </span>
-                    <ul class="flex flex-wrap gap-5 list-none p-0">
-                        <li class="flex align-items-center">
-                            <div class="p-1 border-circle bg-green-400 inline-block mr-2"></div>
-                            <span class="text-900 font-semibold">Identify key research groups and institutions specializing in various themes related to grasslands</span>
-                        </li>
-                        <li class="flex align-items-center">
-                            <div class="p-1 border-circle bg-green-400 inline-block mr-2"></div>
-                            <span class="text-900 font-semibold">Highlight potential data gaps in the existing research</span>
-                        </li>
-                    </ul>
+<!--                    <ul class="flex flex-wrap gap-5 list-none p-0">-->
+<!--                        <li class="flex align-items-center">-->
+<!--                            <div class="p-1 border-circle bg-green-400 inline-block mr-2"></div>-->
+<!--                            <span class="text-900 font-semibold">Identify key research groups and institutions specializing in various themes related to grasslands</span>-->
+<!--                        </li>-->
+<!--                        <li class="flex align-items-center">-->
+<!--                            <div class="p-1 border-circle bg-green-400 inline-block mr-2"></div>-->
+<!--                            <span class="text-900 font-semibold">Highlight potential data gaps in the existing research</span>-->
+<!--                        </li>-->
+<!--                    </ul>-->
                 </div>
 
                 <div class="col-12 md:col-7 flex-order-0 md:flex-order-1 mb-6 md:mb-0 border-round">
