--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,10 @@
 
 <p-tabView>
     <p-tabPanel header="Graphics">
-        <div *ngFor="let data of ['1_evolucao', '2_autores', '3_institu', '4_keywords_all']; " class="grid">
+        <div *ngFor="let data of ['all_numero_publicacoes_por_ano', 'all_top_10_autores', 'all_top_10_instituicoes', 'all_top_10_keywords', 'all_lingua', 'all_nuvem_palavras_todos_clusters','all_mapa_frequencia_publicacoes2']; " class="grid">
             <div class="flex justify-content-start flex-wrap col-offset-2 col-8">
                 <div class="flex justify-content-evenly w-full">
-                    <p-image [src]="'https://s3.lapig.iesa.ufg.br/public/literatura/'+type_source+'/graficos/all/'+data+'.png'" [alt]="data " width="100%" />
+                    <p-image [src]="'https://s3.lapig.iesa.ufg.br/public/literatura/'+type_source+'/all/'+data+'.png'" [alt]="data " width="100%" />
                     
                 </div>
             </div>
