--- a/src/app/pages/analysis/landing.component.html
+++ b/src/app/pages/analysis/landing.component.html
@@ -46,7 +46,7 @@
                     pRipple pStyleClass="@grandparent"
                         enterFromClass="ng-hidden" enterActiveClass="px-fadein" leaveToClass="ng-hidden"
                         class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3 cursor-pointer">
-                        <span>Analysis (coming)</span>
+                        <span>Análise Exploratória</span>
                     </a>
                 </li>
             </ul>
@@ -54,65 +54,15 @@
         </div>
         <div class="py-4 px-4 mx-0 md:mx-6 lg:mx-8 lg:px-8 z-2">
             <div id="home"
-                class="grid grid-nogutter justify-content-between align-items-center mb-6 py-6 md:mb-8 md:py-8">
-                <div
-                    class="col-12 md:col-4 flex flex-column gap-4 flex-order-1 md:flex-order-0 align-items-center md:align-items-start text-center md:text-left">
-                    <span class="block text-900 font-bold text-4xl">Understanding the world’s knowledge production on Grassland</span>
-                    <span class="block text-700 text-lg">This project showcases the results of a comprehensive scientometric analysis of global scientific publications focused on grasslands. The analysis aimed to:</span>
-                    <ul class="flex flex-wrap gap-5 list-none p-0">
-                        <li class="flex align-items-center">
-                            <div class="p-1 border-circle bg-green-400 inline-block mr-2"></div>
-                            <span class="text-900 font-semibold">Identify key research groups and institutions specializing in various themes related to grasslands</span>
-                        </li>
-                        <li class="flex align-items-center">
-                            <div class="p-1 border-circle bg-green-400 inline-block mr-2"></div>
-                            <span class="text-900 font-semibold">Highlight potential data gaps in the existing research</span>
-                        </li>
-                    </ul>
-                </div>
-
-                <div class="col-12 md:col-7 flex-order-0 md:flex-order-1 mb-6 md:mb-0 border-round">
-                    <img animateEnter="moveinright"
-                        src="assets/layout/images/banner.webp" alt=""
-                        class="w-10	border-round shadow-2 animation-duration-1000 animation-ease-out">
-                </div>
+                class="flex flex-column justify-content-center w-full align-items-center">
+               
+                <markdown style="width: 65%;"
+                mermaid
+                src="assets/markdown/descritivas/descritivas.md">
+                </markdown>
+           
             </div>
-
-            <div id="modules" class="my-6 md:my-8">
-                <span class="text-900 block font-bold text-5xl mb-4 text-center">Explore Further</span>
-                <span class="text-700 block text-xl mb-8 text-center line-height-3">This website offers several ways to explore the analysis results.</span>
-
-                <div class="flex flex-column lg:flex-row align-items-center justify-content-between mt-8 gap-8">
-                    <div class="flex flex-column align-items-center">
-                        <img animateEnter="scalein"
-                            src="assets/layout/images/database.webp" alt="chat"
-                            class="w-10 border-round surface-border shadow-2 animation-duration-500 origin-top">
-                        <span class="block text-900 text-lg font-semibold mt-4 text-center">Database Access: View the complete dataset of analyzed publications.</span>
-                    </div>
-                    <div class="flex flex-column align-items-center">
-                        <img animateEnter="scalein"
-                            src="assets/layout/images/cluster.webp" alt="chat"
-                            class="w-10 border-round surface-border shadow-2 animation-duration-500 origin-top">
-                        <span class="block text-900 text-lg font-semibold mt-4 text-center">Publication Clusters: Investigate the identified clusters of related publications.</span>
-                    </div>
-                    <div class="flex flex-column align-items-center">
-                        <img animateEnter="scalein"
-                            src="assets/layout/images/results.webp"
-                            alt="chat"
-                            class="w-10 border-round surface-border shadow-2 animation-duration-500 origin-top">
-                        <span class="block text-900 text-lg font-semibold mt-4 text-center">Results & Analysis: See graphs, charts, and statistical analyses summarizing the findings.</span>
-                    </div>
-                </div>
-            </div>
-
-            <div id="data-source" class="my-12 py-12 md:my-6 md:py-6 w-full">
-                <div class="text-900 font-bold text-5xl mb-4 text-center">Data Source</div>
-                <div class="" >
-                    <div class="text-600 text-xl text-justify mb-2 line-height-3 ">The literature used for this analysis was obtained from the <a href="https://openalex.org/" target="_blank">OpenAlex database</a>, a comprehensive open-access repository of scientific publications.</div>
-                    <div class="text-600 text-xl text-justify mb-8 line-height-3 ">Priem, J., Piwowar, H., & Orr, R. (2022). OpenAlex: A fully-open index of scholarly works, authors, venues, institutions, and concepts. ArXiv. https://arxiv.org/abs/2205.01833</div>
-                </div>
-            </div>
-
+           
             <div class="flex flex-column justify-content-center w-full align-items-center">
                 <a class="cursor-pointer" href="#">
                     <svg width="80" id="Camada_1" data-name="Camada 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 550 550"><defs><style>.cls-1{fill:#b2b2b2;}.cls-2{fill:#5a4320;}.cls-3{fill:#f9b233;}.cls-4{fill:#7cb359;}.cls-5{fill:#257a33;}.cls-6{fill:#ffed00;}</style></defs><title>Cerrado DPAT_final</title><path class="cls-1" d="M130.29,456.22l57.66-11,61.87,2,32.59-1.35,40.85,6.36,37-5,47.2,6.43L372,464.91s-40.06,13.5-41.88,13.5H262.36l-34.26-6-63.18-6.25Z"/><polygon class="cls-2" points="299.1 349.85 326.3 295.7 309.87 314.52 316.22 288.77 295.84 336.17 277.7 370.14 269.04 374.57 266.1 371.75 266.1 371.75 236.15 343.06 190.84 302.82 204.12 324.23 180.24 312.09 221.12 343.67 253.98 374.57 266.02 387.61 266.32 386.9 266.54 402.1 257.77 447.21 251.5 461.99 281.05 461.99 277.28 412.63 277.44 396.56 299.1 349.85"/><polygon class="cls-3" points="248.11 208.13 157.03 208.13 111.49 287.01 157.03 365.89 248.11 365.89 293.66 287.01 248.11 208.13"/><polygon class="cls-4" points="366.09 190.38 293.61 190.38 257.37 253.15 293.61 315.92 366.09 315.92 402.33 253.15 366.09 190.38"/><polygon class="cls-5" points="309.31 116.87 236.82 116.87 200.58 179.64 236.82 242.41 309.31 242.41 345.55 179.64 309.31 116.87"/><polygon class="cls-6" points="204.78 168.28 142.59 168.28 111.49 222.15 142.59 276.02 204.78 276.02 235.88 222.15 204.78 168.28"/></svg>
