--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -28,27 +28,34 @@
                     </a>
                 </li>
                 <li>
-                    <a (click)="router.navigate(['/bibliografia'])" pRipple pStyleClass="@grandparent"
+                    <a (click)="router.navigate(['/cienciometria'])" pRipple pStyleClass="@grandparent"
                         enterFromClass="ng-hidden" enterActiveClass="px-fadein" leaveToClass="ng-hidden"
                         class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3 cursor-pointer">
                         <span>Database</span>
                     </a>
                 </li>
                 <li>
-                    <a (click)="router.navigate(['/bibliografia/cluster'])" pRipple pStyleClass="@grandparent"
+                    <a (click)="router.navigate(['/cienciometria/amplo'])" pRipple pStyleClass="@grandparent"
                         enterFromClass="ng-hidden" enterActiveClass="px-fadein" leaveToClass="ng-hidden"
                         class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3 cursor-pointer">
-                        <span>Clusters</span>
+                        <span>Busca Ampla</span>
                     </a>
                 </li>
                 <li>
+                    <a (click)="router.navigate(['/cienciometria/restrito'])" pRipple pStyleClass="@grandparent"
+                        enterFromClass="ng-hidden" enterActiveClass="px-fadein" leaveToClass="ng-hidden"
+                        class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3 cursor-pointer">
+                        <span>Busca Restrito</span>
+                    </a>
+                </li>
+                <!--li>
                     <a (click)="router.navigate(['/analysis'])"
                     pRipple pStyleClass="@grandparent"
                         enterFromClass="ng-hidden" enterActiveClass="px-fadein" leaveToClass="ng-hidden"
                         class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3 cursor-pointer">
                         <span>Análise Exploratória</span>
                     </a>
-                </li>
+                </li-->
             </ul>
 
         </div>
