--- a/src/app/pages/cluster/cluster.component.html
+++ b/src/app/pages/cluster/cluster.component.html
@@ -1,12 +1,29 @@
 
-<p-tabView>
-    <p-tabPanel header="Graphics">
+<p-tabView (onChange)="onTabChange()">
+    <p-tabPanel header="Estatísticas Descritivas" data-id="descritivas">
+        <div class="flex justify-content-center flex-wrapflex justify-content-center flex-wrap">
+            <markdown style="width: 65%;"
+            mermaid
+            [src]="getMarkdown('descritiva')">
+            </markdown>
+        </div>
+    </p-tabPanel> 
+    <p-tabPanel header="Base de Dados" data-id="table-full">
+        <app-table></app-table>
+    </p-tabPanel> 
+
+    <p-tabPanel header="Agrupamento temático" data-id="agrupamento-tematico">
+        <h2> Agrupamento Temático </h2>
+        <p>
+            Nesta seção, apresentamos a distribuição e os padrões observados em cada cluster temático resultantes da análise de agrupamento realizada com o algoritmo K-means. Serão apresentados os gráficos que ilustram a evolução temporal, os principais autores, instituições e palavras-chave, tipo de publicação e nuvem de palavras dentro de cada cluster, proporcionando uma visão segmentada da produção científica sobre o Cerrado. Esses gráficos oferecem uma representação visual dos tópicos e tendências de pesquisa dentro de cada grupo, permitindo uma análise mais focada em cada área de estudo
+        </p>
         <div *ngFor="let data of imageList">
+            
         <div   class="grid" *ngIf="imageLoaded[data] !== false">
             <div class="flex justify-content-start flex-wrap col-offset-2 col-8" >
                 <div class="flex justify-content-evenly w-full">
                     <p-image 
-                        [src]="'https://s3.lapig.iesa.ufg.br/public/literatura/'+type_source+'/graph/'+cluster_id+data" 
+                        [src]="getImageAgrupamentoTematico(data)" 
                         [alt]="cluster_id+data " 
                         width="100%" 
                         (onImageError)="imageLoaded[data] = false"
@@ -41,7 +58,8 @@
         
         
     </p-tabPanel>
-    <p-tabPanel header="DataBase">
+
+    <p-tabPanel header="Base por Cluster" data-id="table-cluster">
         <div class="grid">
             <div class="col-3">
                 <div class="flex justify-content-center flex-wrap">
@@ -59,4 +77,5 @@
             </div>
         </div>
     </p-tabPanel> 
+    
 </p-tabView>  
