--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,13 +4,13 @@
         <div class="flex justify-content-center flex-wrapflex justify-content-center flex-wrap">
             <markdown style="width: 65%;"
             mermaid
-            src="assets/markdown/descritivas/descritivas.md">
+            src="https://s3.lapig.iesa.ufg.br/public/literatura/cerrado/2025/markdown /1_metodologia.md">
             </markdown>
         </div>
 
 
     </p-tabPanel>
-    <p-tabPanel header="DataBase">
+    <!--p-tabPanel header="DataBase">
         <app-table></app-table>
-    </p-tabPanel> 
+    </p-tabPanel--> 
 </p-tabView>  
